test/functions/deitz/test_inout_const.good
test_inout_const.chpl:9: error: const actual is passed to 'inout' formal 'x' of foo()
